[UPDATE]Admin側のView作成、ログイン&サインアウト時のリダイレクト先変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
+#header {
+    height: 100px;
+}
+
+.submit {
+    text-align: center;
+}
+
+div.field {
+    margin-bottom: 10px;
+}
