--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,24 @@
   </head>
 
   <body>
+    <header id="header" class="page-header">
+      <div class="container">
+        <nav class="nav navbar-nav navbar-left">
+          <h1>Logo</h1>
+        </nav>
+        <nav class="nav navbar-nav navbar-right">
+          <% if end_user_signed_in? %>
+            <li><a href="#">マイページ</a></li>
+            <li><a href="#">カート一覧</a></li>
+            <li><%= link_to "ログアウト",destroy_admin_session_path %></li>
+          <% else %>
+            <li><a href="#">商品一覧</a></li>
+            <li><%= link_to '新規登録', new_end_user_registration_path %></li>
+            <li><%= link_to 'ログイン', end_user_session_path %></li>
+          <% end %>
+        </nav>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
