--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,41 +1,63 @@
-<h2>新規会員登録</h2>
+<div class='container'>
+  <div class='row'>
+    <div class="col-xs-7 col-xs-offset-1">
+      <h2 class="sign_up">新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <label>氏名</label>
-    (性)<%= f.text_field :first_name %>
-    (名)<%= f.text_field :last_name %>
+        <div class="field row">
+          <label class="col-xs-3">氏名</label>
+          <em class="col-xs-1">(性)</em>
+          <%= f.text_field :first_name, class:"col-xs-3" %>
+          <em class="col-xs-1">(名)</em>
+          <%= f.text_field :last_name %>
+        </div>
+
+        <div class="field row">
+          <label class="col-xs-3">フリガナ</label>
+            <em class="col-xs-1">(セイ)</em>
+            <%= f.text_field :last_name_kana, class:"col-xs-3" %>
+            <em class="col-xs-1">(メイ)</em>
+            <%= f.text_field :first_name_kana %>
+        </div>
+
+        <div class="field row">
+          <label class="col-xs-4">メールアドレス</label>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"col-xs-7" %>
+        </div>
+
+        <div class="field row">
+          <label class="col-xs-4">郵便番号(ハイフンなし)</label>
+          <%= f.text_field :postcode %>
+        </div>
+
+        <div class="field row">
+          <label class="col-xs-4">住所</label>
+          <%= f.text_field :address, class:"col-xs-8" %>
+        </div>
+
+        <div class="field row">
+          <label class="col-xs-4">電話番号(ハイフンなし)</label>
+          <%= f.text_field :phone_number %>
+        </div>
+
+        <div class="field row">
+          <label class="col-xs-4">パスワード(6文字以上)</label>
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+
+        <div class="field row">
+          <label class="col-xs-4">パスワード(確認用)</label>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+
+        <div class="actions submit">
+          <%= f.submit "新規登録", class:"btn btn-success" %>
+        </div>
+      <% end %>
+
+      <%= render "public/shared/links" %>
+    </div>
   </div>
-
-  <div>
-    <label>フリガナ</label>
-    (セイ)<%= f.text_field :last_name_kana %>
-    (メイ)<%= f.text_field :first_name_kana %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
