--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
-    <div class="col-xs-7 col-xs-offset-1">
-      <h2 class="sign_up">新規会員登録</h2>
+    <h3 class="sign_up col-xs-7 col-xs-offset-2">新規会員登録</h3>
+    <div class="col-xs-7 col-xs-offset-2">
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
@@ -57,7 +57,10 @@
         </div>
       <% end %>
 
-      <%= render "public/shared/links" %>
+    </div>
+    <div class="col-xs-7 col-xs-offset-2 login">
+      <h3>既に登録済みの方</h3>
+      <p><%= link_to 'こちら', new_end_user_session_path %>からログインしてください</p>
     </div>
   </div>
 </div>
