--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <% if end_user_signed_in? %>
             <li><a href="#">マイページ</a></li>
             <li><a href="#">カート一覧</a></li>
-            <li><%= link_to "ログアウト",destroy_admin_session_path %></li>
+            <li><%= link_to "ログアウト",destroy_end_user_session_path, method: :delete %></li>
           <% else %>
             <li><a href="#">商品一覧</a></li>
             <li><%= link_to '新規登録', new_end_user_registration_path %></li>
