--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         </nav>
         <nav class="nav navbar-nav navbar-right">
           <% if end_user_signed_in? %>
-            <li><a href="#">マイページ</a></li>
+            <li><%= link_to 'マイページ', end_users_path %></li>
             <li><a href="#">カート一覧</a></li>
             <li><%= link_to "ログアウト",destroy_end_user_session_path, method: :delete %></li>
           <% else %>
