--- a/app/views/public/end_users/index.html.erb
+++ b/app/views/public/end_users/index.html.erb
@@ -3,7 +3,7 @@
         <h3 class="col-xs-7 col-xs-offset-2">マイページ</h3>
         <div class="col-xs-7 col-xs-offset-1">
             <h4>登録情報</h4>
-            <%= link_to  "編集する", '#' , class:"btn btn-primary" %>
+            <%= link_to  "編集する",  end_users_edit_path , class:"btn btn-primary" %>
             <%= link_to  "パスワードを変更する", '#' , class:"btn btn-primary" %>
             <table class="table table-bordered rireki">
                 <tr>
