[UPDATE]顧客情報更新機能追加

--- a/app/views/public/end_users/index.html.erb
+++ b/app/views/public/end_users/index.html.erb
@@ -8,11 +8,11 @@
             <table class="table table-bordered rireki">
                 <tr>
                     <th>氏名</th>
-                    <td><%= current_end_user.last_name + "　" +current_end_user.first_name %></td>
+                    <td><%= current_end_user.first_name + "　" +current_end_user.last_name %></td>
                 </tr>
                 <tr>
                     <th>カナ</th>
-                    <td><%= current_end_user.last_name_kana + "　" + current_end_user.first_name_kana %></td>
+                    <td><%= current_end_user.first_name_kana + "　" + current_end_user.last_name_kana %></td>
                 </tr>
                 <tr>
                     <th>郵便番号</th>
