[ADD]退会確認ページの作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,3 +47,13 @@ h4 {
 .rireki {
     margin-top: 10px;
 }
+
+.taikai-p {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 20px;
+}
+
+.taikai-div {
+    display: inline;
+}
