--- a/app/views/public/end_users/edit.html.erb
+++ b/app/views/public/end_users/edit.html.erb
@@ -45,7 +45,7 @@
                     </div>
             <% end %>
                     <div class="col-xs-3 col-xs-offset-3">
-                        <%= link_to "退会する", destroy_show_path, class:"btn btn-danger" %>
+                        <%= link_to "退会する", end_users_destroy_show_path, class:"btn btn-danger" %>
                     </div>
                 </div>
         </div>
