[ADD]ジャンルのseed追加、商品一覧ページにジャンル項目追加

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -6,9 +6,11 @@
                     <th>ジャンル検索</th>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>aaaa</td>
-                    </tr>
+                    <% @categorys.each do |category| %>
+                        <tr>
+                            <td><%= category.name %></td>
+                        </tr>
+                    <% end %>
                 </tbody>
             </table>
         </div>
