[ADD]商品(product)モデルの作成

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -15,7 +15,7 @@
             </table>
         </div>
         <div class="col-xs-9">
-        aaa
+            <h2>商品一覧</h2>
         </div>
     </div>
 </div>
