--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,11 @@
           <% if end_user_signed_in? %>
             <p class="navbar-text">ようこそ <%= current_end_user.first_name + current_end_user.last_name %>さん。</p>
             <li><%= link_to 'マイページ', end_users_path %></li>
+            <li><%= link_to '商品一覧', items_path %></li>
             <li><a href="#">カート一覧</a></li>
             <li><%= link_to "ログアウト",destroy_end_user_session_path, method: :delete %></li>
           <% else %>
-            <li><a href="#">商品一覧</a></li>
+            <li><%= link_to '商品一覧', items_path %></li>
             <li><%= link_to '新規登録', new_end_user_registration_path %></li>
             <li><%= link_to 'ログイン', end_user_session_path %></li>
           <% end %>
