[ADD]管理者側の商品一覧画面作成

--- a/app/views/layouts/admin_layout.html.erb
+++ b/app/views/layouts/admin_layout.html.erb
@@ -19,7 +19,7 @@
                 <% if admin_signed_in? %>
                     <li><a href="#">受注一覧</a></li>
                     <li><%= link_to '顧客一覧', admin_end_users_path %></li>
-                    <li><a href="#">商品登録</a></li>
+                    <li><%= link_to '商品一覧', admin_items_path %></li>
                     <li><%= link_to "ログアウト",destroy_admin_session_path, method: :delete %></li>
                 <% else %>
                 <% end %>
