--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
-        <h3>商品一覧画面</h3>
+        <div class='col-xs-7'>
+            <h3 class="product-list col-xs-4">商品一覧画面</h3>
+            <h3 class='col-xs-1 col-xs-offset-5'><%= link_to "", new_admin_item_path,class:"glyphicon glyphicon-plus" %></h3>
+        </div>
         <div class="col-xs-7">
             <table class="table">
                 <thead>
