--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -3,33 +3,34 @@
         <h3>商品新規登録画面</h3>
         <%= form_for @product, url: admin_items_path do |f| %>
             <div class='col-xs-4'>
-                <%= f.attachment_field :image %>
+                <%= image_tag 'sample.png', id: :img_prev, width: "300px" %>
+                <%= f.attachment_field :image, id: :user_img, class:"btn btn-primary" %>
             </div>
             <div class="col-xs-8">
                 <div class="field row">
-                    <label>商品名</label>
-                    <%= f.text_field :name %>
+                    <label class="col-xs-2">商品名</label>
+                    <%= f.text_field :name, class:"col-xs-4" %>
                 </div>
                 <div class="field row">
-                    <label>商品説明</label>
-                    <%= f.text_area :description %>
+                    <label class="col-xs-2">商品説明</label>
+                    <%= f.text_area :description, class:"col-xs-4" %>
                 </div>
                 <div class="field row">
-                    <label>ジャンル</label>
-                    <%= f.collection_select :category_id, Category.all, :id, :name %>
+                    <label class="col-xs-2">ジャンル</label>
+                    <%= f.collection_select :category_id, Category.all, :id, :name, class:"col-xs-4" %>
                 </div>
                 <div class="field row">
-                    <label>税抜価格</label>
-                    <%= f.text_field :tax %>円
+                    <label class="col-xs-2">税抜価格</label>
+                    <%= f.text_field :tax, class:"col-xs-4" %>円
                 </div>
                 <div class="field row">
-                    <label>販売ステータス</label>
-                    <%= f.radio_button :status, '販売中' %>販売中
+                    <label class="col-xs-2">販売ステータス</label>
+                    <span class="col-xs-2"><%= f.radio_button :status, '販売中' %>販売中</span>
                     <%= f.radio_button :status, '販売停止中' %>販売停止中
                 </div>
             </div>
-            <div>
-                <%= f.submit '新規登録' %>
+            <div class="col-xs-offset-8">
+                <%= f.submit '新規登録', class:"btn btn-primary" %>
             </div>
         <% end %>
     </div>
