--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,3 +61,15 @@ h4 {
 .product-list {
     display: inline;
 }
+
+.items-list {
+    display: inline;
+}
+
+.items-count {
+    font-size: 20px;
+}
+
+.product-name {
+    font-size: 15px;
+}
