--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -19,7 +19,7 @@
                     <% @products.each do |product| %>
                         <tr>
                             <td><%= product.id %></td>
-                            <td><%= product.name %></td>
+                            <td><%= link_to product.name, admin_item_path(product) %></td>
                             <td><%= product.tax %></td>
                             <td><%= product.category.name %></td>
                             <td><%= product.status %></td>
