--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -9,8 +9,11 @@
             <p><%= @product.description %></p>
             <h4>¥ <%= @product.tax %><em>(税込)</em></h4>
         </div>
-        <div class=" col-xs-offset-9 col-xs-5">
-        aaa
+        <div class=" col-xs-offset-8 col-xs-5">
+            <%= form_for @cart_item ,url: cart_items_path do |f| %>
+                <div class="number-box col-xs-3 col-xs-offset-1"><%= f.select :number, [1,2,3,4,5,6,7,8,9,10], {} ,class:"number" %></div>
+                <%= f.submit "カートに入れる", class:"btn btn-primary col-xs-4" %>
+            <% end %>
         </div>
     </div>
 </div>
