--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <%= render "layouts/category", categorys: Category.all %>
+        <%= render "layouts/category", categorys: Genre.all %>
         <div class="col-xs-9">
             <div>
                 <h2 class="items-list">商品一覧</h2><span class="items-count">(全<%= @products.count %>件)</span>
