[FIX]商品登録ができない不具合を修正

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -17,7 +17,7 @@
                 </div>
                 <div class="field row">
                     <label class="col-xs-2">ジャンル</label>
-                    <%= f.collection_select :category_id, Category.all, :id, :name, class:"col-xs-4" %>
+                    <%= f.collection_select :genre_id, Genre.all, :id, :name, class:"col-xs-4" %>
                 </div>
                 <div class="field row">
                     <label class="col-xs-2">税抜価格</label>
