--- a/app/views/public/cart_items/index.html.slim
+++ b/app/views/public/cart_items/index.html.slim
@@ -18,4 +18,4 @@
           - @cart_items.each do |cart_item|
             tr
               td
-                = cart_item.product.name
+                = cart_item.item.name
