--- a/app/views/public/items/show.html.slim
+++ b/app/views/public/items/show.html.slim
@@ -15,6 +15,7 @@
           | (税込)
     .col-xs-offset-8.col-xs-5
       = form_for @cart_item ,url: cart_items_path do |f|
+        = f.hidden_field :item_id , :value => @product.id
         .number-box.col-xs-3.col-xs-offset-1
           = f.select :number, [1,2,3,4,5,6,7,8,9,10], {} ,class:"number"
         = f.submit "カートに入れる", class:"btn btn-primary col-xs-4"
