[UPDATE]カート内の商品全削除の機能追加

--- a/app/views/public/cart_items/index.html.slim
+++ b/app/views/public/cart_items/index.html.slim
@@ -2,6 +2,8 @@
   .row
     h3.col-xs-offset-1
       | ショッピングカート
+    div.col-xs-offset-9
+      = link_to 'カートを空にする', cart_items_all_delete_path, method: :delete,class:'btn btn-danger'
     div.col-xs-10.col-xs-offset-1
       table.table
         thead
