--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,7 @@ html
         nav.nav.navbar-nav.navbar-right
           - if end_user_signed_in?
             p.navbar-text
-              | ようこそ 
+              | ようこそ
               = current_end_user.first_name + current_end_user.last_name
               | さん。
             li
@@ -24,8 +24,7 @@ html
             li
               = link_to '商品一覧', items_path
             li
-              a[href="#"]
-                | カート一覧
+              = link_to 'カート一覧', cart_items_path
             li
               = link_to "ログアウト",destroy_end_user_session_path, method: :delete
           - else
