[UPDATE]2個目以降カートの商品を追加時に個数が増えるように修正

--- a/app/views/layouts/admin_layout.html.slim
+++ b/app/views/layouts/admin_layout.html.slim
@@ -19,6 +19,8 @@ html
               a[href="#"]
                 | 受注一覧
             li
+              = link_to '商品追加', new_admin_item_path
+            li
               = link_to '顧客一覧', admin_end_users_path
             li
               = link_to '商品一覧', admin_items_path
