[FIX]商品追加時にcart_idが式に設定されてるのを修正

--- a/app/views/admin/items/show.html.slim
+++ b/app/views/admin/items/show.html.slim
@@ -14,12 +14,12 @@
       .field.row
         label.col-xs-3
           | ジャンル
-        = @product.category.name
+        = @product.genre.name
       .field.row
         label.col-xs-3
           | 税込価格(税抜価格)
         = @product.tax
-        | 円 
+        | 円
       .field.row
         label.col-xs-3
           | 販売ステータス
