--- a/app/views/public/cart_items/index.html.slim
+++ b/app/views/public/cart_items/index.html.slim
@@ -32,9 +32,13 @@
                 = cart_item.total_price(cart_item.number, cart_item.item.tax)
               td
                 = link_to "削除する", cart_items_delete_path(cart_item), method: :delete ,class:"btn btn-danger"
-    div.col-xs-4.col-xs-offset-7
+    div.col-xs-6.col-xs-offset-2
+      = link_to '買い物を続ける', items_path, class:"btn btn-primary"
+    div.col-xs-3
       table.table
         th
           | 合計金額
         td
           = @total_tax
+    div.col-xs-4.col-xs-offset-5
+      = link_to '情報入力に進む', '#', class: "btn btn-success"
