--- a/app/views/public/cart_items/index.html.slim
+++ b/app/views/public/cart_items/index.html.slim
@@ -41,4 +41,4 @@
         td
           = @total_tax
     div.col-xs-4.col-xs-offset-5
-      = link_to '情報入力に進む', '#', class: "btn btn-success"
+      = link_to '情報入力に進む', orders_new_path, class: "btn btn-success"
