--- a/app/views/public/addresses/index.html.slim
+++ b/app/views/public/addresses/index.html.slim
@@ -1,4 +1,29 @@
 .container
     .row
-        h3
+        h3.col-xs-offset-1
             | 配送先登録/一覧
+        .col-xs-10.col-xs-offset-1
+            = form_with model: @address do |f|
+                .field.row
+                    label
+                        | 郵便番号(ハイフンなし)
+                    = f.text_field :postcode
+                .field.row
+                    label
+                        | 住所
+                    = f.text_field :address
+                .field.row
+                    label
+                        | 宛名
+                    = f.text_field :destination
+                .action.row
+                    = f.submit '登録'
+        .col-xs-10.col-xs-offset-1
+            table.table
+                thead
+                    th
+                        | 郵便番号
+                    th
+                        | 住所
+                    th
+                        | 宛名
