--- a/app/views/public/addresses/index.html.slim
+++ b/app/views/public/addresses/index.html.slim
@@ -19,7 +19,7 @@
                 .action.row
                     = f.submit '登録'
         .col-xs-10.col-xs-offset-1
-            table.table
+            table.table.table-bordered
                 thead
                     th
                         | 郵便番号
@@ -27,6 +27,8 @@
                         | 住所
                     th
                         | 宛名
+                    th
+                        |
                 tbody
                     - @addresses.each do |address|
                         tr
@@ -36,3 +38,6 @@
                                 = address.address
                             td
                                 = address.destination
+                            td
+                                = link_to '編集する', address_edit_path(address), class:"btn btn-primary"
+                                = link_to '削除する', address_destroy_path(address), class:"btn btn-danger"
