--- a/app/views/public/addresses/index.html.slim
+++ b/app/views/public/addresses/index.html.slim
@@ -40,4 +40,4 @@
                                 = address.destination
                             td
                                 = link_to '編集する', address_edit_path(address), class:"btn btn-primary"
-                                = link_to '削除する', address_destroy_path(address), class:"btn btn-danger"
+                                = link_to '削除する', address_destroy_path(address), method: :delete , class:"btn btn-danger"
