--- a/app/views/public/addresses/index.html.slim
+++ b/app/views/public/addresses/index.html.slim
@@ -5,19 +5,18 @@
         .col-xs-10.col-xs-offset-1
             = form_with model: @address do |f|
                 .field.row
-                    label
+                    label.col-xs-3
                         | 郵便番号(ハイフンなし)
                     = f.text_field :postcode
                 .field.row
-                    label
+                    label.col-xs-3
                         | 住所
-                    = f.text_field :address
+                    = f.text_field :address, class:"col-xs-5"
                 .field.row
-                    label
+                    label.col-xs-3
                         | 宛名
                     = f.text_field :destination
-                .action.row
-                    = f.submit '登録'
+                    = f.submit "登録する", class:"col-xs-offset-4 btn btn-success"
         .col-xs-10.col-xs-offset-1
             table.table.table-bordered
                 thead
