[ADD]購入情報入力ページから確認ページにデータ移すとこまで

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ em {
     margin-top: 40px;
 }
 
-h4 {
+.info {
     display: inline;
 }
 
@@ -80,4 +80,12 @@ h4 {
 
 .number-box {
     display: inline;
+}
+
+.payment {
+    display: block;
+}
+
+.address {
+    display: block;
 }
