--- a/app/views/public/end_users/index.html.slim
+++ b/app/views/public/end_users/index.html.slim
@@ -3,7 +3,7 @@
     h3.col-xs-7.col-xs-offset-2
       | マイページ
     .col-xs-7.col-xs-offset-1
-      h4
+      h4.info
         | 登録情報
       = link_to  "編集する",  end_users_edit_path , class:"btn btn-primary"
       = link_to  "パスワードを変更する", '#' , class:"btn btn-primary"
@@ -41,7 +41,7 @@
     .col-xs-7.col-xs-offset-1
       h4.col-xs-2
         | 配送先
-      = link_to  "一覧を見る", '#', class:'btn btn btn-primary'
+      = link_to  "一覧を見る", addresses_path, class:'btn btn btn-primary'
     .col-xs-7.col-xs-offset-1.rireki
       h4.col-xs-2
         | 注文履歴
