--- a/app/views/public/orders/new.html.slim
+++ b/app/views/public/orders/new.html.slim
@@ -3,4 +3,53 @@
         h3.col-xs-7.col-xs-offset-1
             | 購入情報入力
         .col-xs-12
-            = form_for @order do |f|
+            = form_for(@order, url: orders_check_show_path) do |f|
+                .field.row
+                    h4
+                        | 支払い方法
+                    .col-xs-5
+                        span.payment
+                            = f.radio_button :payment, 'クレジットカード'
+                            | クレジットカード
+                        span.payment
+                            = f.radio_button :payment, '銀行振込'
+                            | 銀行振込
+                .field.row
+                    h4
+                        | お届け先
+                    .col-xs-5
+                        span.address
+                            = radio_button_tag :address_select, "1", checked: true
+                            | ご自身の住所
+                            = current_end_user.postcode + " " + current_end_user.address
+                            | <br>
+                            = current_end_user.first_name + current_end_user.last_name
+
+                            = hidden_field_tag :postcode, :value => current_end_user.postcode
+                            = hidden_field_tag :address, :value => current_end_user.address
+                            = hidden_field_tag :destination, :value => current_end_user.first_name + current_end_user.last_name
+
+                        span.address
+                            = radio_button_tag :address_select, "2"
+                            | 登録済み住所から選択
+                            | <br>
+                            = f.collection_select :address, current_end_user.addresses, :id, :postcode
+
+                        span.address
+                            = radio_button_tag :address_select, "3"
+                            | 新しいお届け先
+                            .div
+                                .field.row
+                                    label
+                                        | 郵便番号(ハイフンなし)
+                                    = f.text_field :postage
+                                .field.row
+                                    label
+                                        | 住所
+                                    = f.text_field :address
+                                .field.row
+                                    label
+                                        | 宛名
+                                    = f.text_field :destination
+                .action.row
+                    = f.submit "test"
