--- a/app/views/public/orders/check_show.html.slim
+++ b/app/views/public/orders/check_show.html.slim
@@ -1,64 +1,72 @@
 .container
-    .row
-        h3
-            | 注文情報確認
-        .col-xs-8
-            table.table.table-bordered
-                thead
-                    th
-                        | 商品名
-                    th
-                        | 単価(税込み)
-                    th
-                        | 数量
-                    th
-                        | 小計
-                tbody
-                    - current_end_user.cart_items.each do |cart_item|
-                        - @total_tax = @total_tax.to_i + cart_item.item.tax.to_i * cart_item.number.to_i
-                        tr
-                            td
-                                = cart_item.item.name
-                            td
-                                = cart_item.item.tax
-                            td
-                                = cart_item.number
-                            td
-                                = cart_item.item.tax.to_i * cart_item.number.to_i
+    = form_for(@order, url: orders_path ) do |f|
+        .row
+            h3
+                | 注文情報確認
+            .col-xs-8
+                table.table.table-bordered
+                    thead
+                        th
+                            | 商品名
+                        th
+                            | 単価(税込み)
+                        th
+                            | 数量
+                        th
+                            | 小計
+                    tbody
+                        - current_end_user.cart_items.each do |cart_item|
+                            - @total_tax = @total_tax.to_i + cart_item.item.tax.to_i * cart_item.number.to_i
+                            tr
+                                td
+                                    = cart_item.item.name
+                                td
+                                    = cart_item.item.tax
+                                td
+                                    = cart_item.number
+                                td
+                                    = cart_item.item.tax.to_i * cart_item.number.to_i
 
-        .col-xs-3
-            table.table.table-bordered
-                tr
-                    th
-                        | 送料
-                    td
-                        | 800
-                tr
-                    th
-                        | 商品合計
-                    td
-                        = @total_tax
-                tr
-                    th
-                        | 請求金額
-                    td
-                        = @total_tax + 800
+            .col-xs-3
+                table.table.table-bordered
+                    tr
+                        th
+                            | 送料
+                        td
+                            | 800
+                    tr
+                        th
+                            | 商品合計
+                        td
+                            = @total_tax
+                    tr
+                        th
+                            | 請求金額
+                        td
+                            - @order.amount = @total_tax.to_i + 800
+                            = @order.amount
 
-    .row
-        .col-xs-4
-            = form_for(@order, url: orders_path) do |f|
+        .row
+            .col-xs-4
                 label.col-xs-4
                     | 支払い方法
                 = @order.payment
 
-    .row
-        .col-xs-7
-            label.col-xs-2
-                | お届け先
-            = @order.postcode + @order.address
-            | <br>
-            = @order.destination
+        .row
+            .col-xs-7
+                label.col-xs-2
+                    | お届け先
+                = @order.postcode + @order.address
+                | <br>
+                = @order.destination
 
-    .row
-        .col-xs-5.col-xs-offset-5
-            | aaa
+        .row
+            .col-xs-5.col-xs-offset-5
+                = f.hidden_field :payment, :value => @order.payment
+                = f.hidden_field :postage, :value => @order.postage
+                = f.hidden_field :amount, :vallue => @order.amount
+                = f.hidden_field :address, :vallue => @order.address
+                = f.hidden_field :postcode, :value => @order.postcode
+                = f.hidden_field :destination, :value => @order.destination
+
+                = f.submit '購入を確定する', class:"btn btn-primary"
