--- a/app/views/public/orders/new.html.slim
+++ b/app/views/public/orders/new.html.slim
@@ -49,4 +49,4 @@
                                         | 宛名
                                     = f.text_field :destination
                 .action.row
-                    = f.submit "test"
+                    = f.submit "確認画面に進む"
