--- a/app/views/admin/orders/index.html.slim
+++ b/app/views/admin/orders/index.html.slim
@@ -19,7 +19,7 @@
                             td
                                 = order.created_at
                             td
-                                = order.destination
+                                = order.end_user.first_name + order.end_user.last_name
                             td
                                 = order.amount
                             td
