--- a/app/views/public/orders/check_show.html.slim
+++ b/app/views/public/orders/check_show.html.slim
@@ -17,6 +17,7 @@
                     tbody
                         - current_end_user.cart_items.each do |cart_item|
                             - @total_tax = @total_tax.to_i + cart_item.item.tax.to_i * cart_item.number.to_i
+                            - @order.amount = @order.amount.to_i + cart_item.number.to_i
                             tr
                                 td
                                     = cart_item.item.name
@@ -43,8 +44,7 @@
                         th
                             | 請求金額
                         td
-                            - @order.amount = @total_tax.to_i + 800
-                            = @order.amount
+                            = @total_tax.to_i + 800
 
         .row
             .col-xs-4
