--- a/app/views/admin/orders/index.html.slim
+++ b/app/views/admin/orders/index.html.slim
@@ -17,7 +17,7 @@
                     - @orders.each do |order|
                         tr
                             td
-                                = order.created_at
+                                = order.created_at.strftime('%Y/%m/%d %H:%M')
                             td
                                 = order.end_user.first_name + order.end_user.last_name
                             td
