--- a/app/views/public/end_users/index.html.slim
+++ b/app/views/public/end_users/index.html.slim
@@ -45,4 +45,4 @@
     .col-xs-7.col-xs-offset-1.rireki
       h4.col-xs-2
         | 注文履歴
-      = link_to  "一覧を見る", '#', class:'btn btn btn-primary'
+      = link_to  "一覧を見る", orders_path, class:'btn btn btn-primary'
