[FIX]注文履歴にすべてのユーザーの履歴が表示される不具合を修正

--- a/app/views/admin/orders/show.html.slim
+++ b/app/views/admin/orders/show.html.slim
@@ -58,7 +58,7 @@
                                 | まだ作ってない
 
         .col-xs-4
-            table
+            table.table
                 tr
                     th
                         | 商品合計
