--- a/app/views/public/orders/show.html.slim
+++ b/app/views/public/orders/show.html.slim
@@ -1,3 +1,5 @@
+- @order.order_details.each do |details|
+    - @subtotal = @subtotal.to_i + details.item.tax.to_i
 .container
     .row
         h3
@@ -39,7 +41,7 @@
                     th
                         | 商品合計
                     td
-                        =
+                        = @subtotal
                 tr
                     th
                         | 配送料
@@ -49,7 +51,7 @@
                     th
                         | 請求金額
                     td
-                        =
+                        = @subtotal.to_i + @order.postage
 
     .row
         .col-xs-8
