--- a/app/views/admin/orders/show.html.slim
+++ b/app/views/admin/orders/show.html.slim
@@ -30,7 +30,7 @@
                         th
                             | 注文ステータス
                         td
-                            | まだ作ってない
+                            = @order.status
 
     .row
         .col-xs-8
@@ -55,7 +55,7 @@
                             td
                                 = detail.amount
                             td
-                                | まだ作ってない
+                                = detail.status
 
         .col-xs-4
             table.table
