--- a/app/views/admin/orders/show.html.slim
+++ b/app/views/admin/orders/show.html.slim
@@ -30,7 +30,7 @@
                         th
                             | 注文ステータス
                         td
-                            = @order.status
+                            = @order.status_i18n
 
     .row
         .col-xs-8
@@ -55,7 +55,7 @@
                             td
                                 = detail.amount
                             td
-                                = detail.status
+                                = detail.status_i18n
 
         .col-xs-4
             table.table
