[UPDATE]注文ステータスをセレクトボックスで変更できるように

--- a/app/views/admin/orders/index.html.slim
+++ b/app/views/admin/orders/index.html.slim
@@ -23,4 +23,4 @@
                             td
                                 = order.amount
                             td
-                                = order.status
+                                = order.status_i18n
