--- a/app/views/public/orders/show.html.slim
+++ b/app/views/public/orders/show.html.slim
@@ -31,7 +31,7 @@
                     th
                         | ステータス
                     td
-                        = @order.status
+                        = @order.status_i18n
 
         .col-xs-4
             h4
