--- a/app/views/admin/orders/show.html.slim
+++ b/app/views/admin/orders/show.html.slim
@@ -30,7 +30,9 @@
                         th
                             | 注文ステータス
                         td
-                            = @order.status_i18n
+                            = form_for @order, url: admin_order_path(@order) do |f|
+                                = f.select :status, Order.statuses.keys.map { |k| [I18n.t("enums.order.status.#{k}"),k]}
+                                = f.submit '更新', class: 'btn btn-primary'
 
     .row
         .col-xs-8
