--- a/app/views/public/orders/index.html.slim
+++ b/app/views/public/orders/index.html.slim
@@ -33,6 +33,6 @@
                             td
                                 | ☆（ゝω・）vｷｬﾋﾟ
                             td
-                                | まだ作ってない
+                                = order.status_i18n
                             td
                                 = link_to '表示する', order_path(order), class:"btn btn-primary"
