--- a/app/views/layouts/admin_layout.html.slim
+++ b/app/views/layouts/admin_layout.html.slim
@@ -14,6 +14,12 @@ html
           h1
             | Logo
         nav.nav.navbar-nav.navbar-right
+          .col-xs-12
+            h4.info
+              | 検索フォーム
+              = form_tag(admin_items_path, :method => 'get') do
+                = text_field_tag (:search)
+                = submit_tag '検索', :name => nil
           - if admin_signed_in?
             li
               = link_to '受注一覧', admin_orders_path
